tests/ui/explicit-tail-calls/ctfe-id-unlimited.return.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/ctfe-id-unlimited.rs:16:42
   |
LL |             #[cfg(r#return)] _ => return inner(acc + 1, n - 1),
   |                                          ^^^^^^^^^^^^^^^^^^^^^ reached the configured maximum number of stack frames
   |
note: inside `inner`
  --> $DIR/ctfe-id-unlimited.rs:16:42
   |
LL |             #[cfg(r#return)] _ => return inner(acc + 1, n - 1),
   |                                          ^^^^^^^^^^^^^^^^^^^^^
note: [... 125 additional calls inside `inner` ...]
  --> $DIR/ctfe-id-unlimited.rs:16:42
   |
LL |             #[cfg(r#return)] _ => return inner(acc + 1, n - 1),
   |                                          ^^^^^^^^^^^^^^^^^^^^^
note: inside `rec_id`
  --> $DIR/ctfe-id-unlimited.rs:21:5
   |
LL |     inner(0, n)
   |     ^^^^^^^^^^^
note: inside `ID_ED`
  --> $DIR/ctfe-id-unlimited.rs:28:20
   |
LL | const ID_ED: u32 = rec_id(ORIGINAL);
   |                    ^^^^^^^^^^^^^^^^

note: erroneous constant used
  --> $DIR/ctfe-id-unlimited.rs:30:40
   |
LL | const ASSERT: () = assert!(ORIGINAL == ID_ED);
   |                                        ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
